# forex-connect

./: GEHTSOFT USA OPEN LICENSE v1.0.docx  GEHTSOFT USA OPEN LICENSE v1.0.html  GEHTSOFT USA OPEN LICENSE v1.0.md  README.md  requirements.txt
samples/Android/FXTSMobile/app/: build.gradle
samples/Android/FXTSMobileTableManager/app/: build.gradle
samples/Android/GetHistPrices/app/: build.gradle
samples/Android/GetReport/app/: build.gradle
samples/Linux/cpp/: readme.txt
samples/Linux/cpp/PriceHistoryAPI/GetHistPrices/: CMakeLists.txt  fxclean.sh  readme.txt
samples/Linux/cpp/PriceHistoryAPI/GetHistPrices/source/: CommunicatorStatusListener.h  LoginParams.cpp
samples/Linux/cpp/sample_tools/: fxbuild.sh
samples/Linux/netcore_for_Linux_x64_only/netcore1.0/: samples.sln
samples/Python/: AttachStopLimitOrder.py  BuildLiveHistory.py  ClosePosition.py  ClosePositionByProfitOrLoss.py  CreateEntryOrder.py  CreateEntryWithPeggedStopLimit.py  GetHistPrices.py  GetOffers.py  GetReport.py  Indicators.py  Login.py  LoginWithToken.py  MovingAveragesCrossTrading.py  OpenAtTime.py  OpenPosition.py  PricePredictionMLClassification.py  PricePredictionMLClassificationLive.py  PricePredictionMLRegressionMA.py  PricePredictionMLRegressionPrevious.py  PrintTable.py  README.txt  RemoveOrder.py  SetStop.py  SetSubscriptionStatus.py
samples/Python/LiveChartDataExport/: Configuration.xml  LiveChartDataExport.py
samples/Python/common_samples/: BatchOrderMonitor.py  OrderMonitor.py  OrderMonitorNetting.py  TableListenerContainer.py  __init__.py  common.py
samples/Python/readme/: AttachStopLimitOrder_readme.txt  BuildLiveHistory_readme.txt  ClosePositionByProfitOrLoss_readme.txt  ClosePosition_readme.txt  CreateEntryOrder_readme.txt  CreateEntryWithPeggedStopLimit_readme.txt  GetHistPrices_readme.txt  GetOffers_readme.txt  GetReport_readme.txt  Indicators_readme.txt  LiveChartDataExport_readme.txt  LoginWithToken_readme.txt  Login_readme.txt  MovingAveragesCrossTrading_readme.txt  OpenAtTime_readme.txt  OpenPosition_readme.txt  PricePredictionMLClassificationLive_readme.txt  PricePredictionMLClassification_readme.txt  PricePredictionMLRegressionMA_readme.txt  PricePredictionMLRegressionPrevious_readme.txt  PrintTable_readme.txt  RemoveOrder_readme.txt  SetStop_readme.txt  SetSubscriptionStatus_readme.txt
samples/Windows/cpp/: samples.sln
samples/Windows/cpp/sample_tools/: fxbuild.bat  fxclean.bat  sample_tools.vcxproj
samples/Windows/cs/dotnet45/: samples.sln
samples/Windows/cs/netcore1.0/: samples.sln
samples/Windows/vb/: samples.sln
samples/Windows/vb/GetHistPrices/: GetHistPrices.vbproj  Program.vb
samples/Windows/vb/GetOffers/: GetOffers.vbproj  Program.vb
samples/Windows/vb/Login/: Login.vbproj  Program.vb
samples/cpp_VS2005/: Samples64.sln  readme.txt  samples.sln
samples/cpp_VS2005/NonTableManagerSamples/CalculateTradingCommissions/: CalculateTradingCommissions.vcproj  ReadMe.txt  fxbuild.bat  fxrun.bat
samples/cpp_VS2005/NonTableManagerSamples/CheckPermissions/: CheckPermissions.vcproj  fxbuild.bat  fxrun.bat
samples/cpp_VS2005/NonTableManagerSamples/CloseAllPositions/: CloseAllPositions.vcproj
samples/cpp_VS2005/NonTableManagerSamples/CloseAllPositionsByInstrument/: CloseAllPositionsByInstrument.vcproj  fxbuild.bat  fxrun.bat
samples/cpp_VS2005/NonTableManagerSamples/ClosePosition/: ClosePosition.vcproj  fxbuild.bat  fxrun.bat
samples/cpp_VS2005/NonTableManagerSamples/CreateAndFindEntry/: CreateAndFindEntry.vcproj  fxbuild.bat  fxrun.bat
samples/cpp_VS2005/NonTableManagerSamples/CreateELS/: CreateELS.vcproj  fxbuild.bat
samples/cpp_VS2005/NonTableManagerSamples/CreateEntry/: CreateEntry.vcproj  ReadMe.txt  fxrun.bat
samples/cpp_VS2005/NonTableManagerSamples/CreateOCO/: CreateOCO.vcproj
samples/cpp_VS2005/NonTableManagerSamples/CreateOTO/: CreateOTO.vcproj  fxbuild.bat  fxrun.bat
samples/cpp_VS2005/NonTableManagerSamples/CreateOTOCO/: CreateOTOCO.vcproj  ReadMe.txt
samples/cpp_VS2005/NonTableManagerSamples/CreateOrderBySymbol/: CreateOrderBySymbol.vcproj  fxbuild.bat  fxrun.bat
samples/cpp_VS2005/NonTableManagerSamples/GetHistPrices/: GetHistPrices.vcproj  fxbuild.bat
samples/iOS/: license.txt  readme.txt
samples/iOS/GetHistory/: readme.txt
samples/iOS/GetHistory.Swift/: NOTICE.txt
samples/iOS/GetReport/: readme.txt
samples/iOS/iTradeStation/: MainWindow-iPad.xib  MainWindow.xib  iTradeStation-Info.plist  main.m
samples/iOS/iTradeStation (non-TM).Swift/: cacert.pem
samples/iOS/iTradeStation(TM)/: readme.txt
samples/iOS/iTradeStation(non-TM)/: readme.txt
samples/iOS/tmSample/: AccountViewController.xib  IndexViewController.xib  MainWindow-iPad.xib  MainWindow.xib  OfferViewController.xib  cacert.pem  iTradeStationTMSample-Info.plist  iTradeStationTMSample_Prefix.pch
samples/macOS/cpp/PriceHistoryAPI/hptools/: CMakeLists.txt  fxbuild.sh  fxclean.sh
samples/macOS/cpp/PriceHistoryAPI/hptools/include/mutex/: Mutex.h
samples/macOS/cpp/PriceHistoryAPI/hptools/include/threading/: Interlocked.h  ThreadHandle.h
samples/macOS/cpp/PriceHistoryAPI/hptools/resource/: resVersionHptools.h  resource.h
samples/macOS/cpp/PriceHistoryAPI/hptools/source/date/: date.cpp
samples/macOS/cpp/PriceHistoryAPI/hptools/source/win_emul/: CWinEventHandle.cpp  winevent.cpp
samples/macOS/cpp/TableManagerSamples/PrintTable/: CMakeLists.txt  ReadMe.txt
samples/macOS/cpp/TableManagerSamples/PrintTable/source/: EachRowListener.cpp
samples/macOS/cpp/sample_tools/: CMakeLists.txt
samples/macOS/cpp/sample_tools/include/: sample_tools.h
samples/macOS/cpp/sample_tools/include/mutex/: Mutex.h
samples/macOS/cpp/sample_tools/include/threading/: AThread.h  Interlocked.h
samples/macOS/cpp/sample_tools/lib/: libsample_tools.dylib
samples/macOS/cpp/sample_tools/source/: stdafx.h
samples/macOS/cpp/sample_tools/source/date/: date.cpp
samples/macOS/cpp/sample_tools/source/threading/: PosixThreadImpl.cpp
samples/macOS/cpp/sample_tools/source/win_emul/: CWinEventHandle.cpp  hidden_class.h  winCRTsecure.cpp  winevent.cpp
(+2234 files in other folders)
